Added GTest functional

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,6 @@ include_directories(ImageAnalyzer)
 include_directories(SensorAnalyzer)
 include_directories(MovementController)
 
+add_subdirectory(tests)
+
 add_executable(main main.cpp)
