--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,16 +1,16 @@
-# include(FetchContent)
+include(FetchContent)
 
-# FetchContent_Declare(
-#   googletest
-#   GIT_REPOSITORY https://github.com/google/googletest.git
-#   GIT_TAG        release-1.11.0
-# )
-# FetchContent_MakeAvailable(googletest)
-# add_library(GTest::GTest INTERFACE IMPORTED)
-# target_link_libraries(GTest::GTest INTERFACE gtest_main)
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG        release-1.11.0
+)
+FetchContent_MakeAvailable(googletest)
+add_library(GTest::GTest INTERFACE IMPORTED)
+target_link_libraries(GTest::GTest INTERFACE gtest_main)
 
 enable_testing ()
 add_executable (Test tests.cpp)
-target_link_libraries(Test gtest_main gmock_main)
+target_link_libraries(Test gtest_main gmock_main ${MAIN_DEPENDENCIES})
 
 add_test (NAME MyTest COMMAND Test)
