--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ FILE(COPY suitable_img.png DESTINATION "${CMAKE_BINARY_DIR}/src/tests")
 set(TEST_SRC 
   ImageAnalyzer.cpp
   tests.cpp
+  Crsf.cpp
 )
 
 enable_testing ()
